--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,11 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/blogs
 spring.datasource.username=root
-spring.datasource.password=
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.password=vlad2023450z
+spring.datasource.driver-class -name=com.mysql.jdbc.Driver  
+spring.data.rest.base-path=/api
+
+spring.jpa.show-sql=true
+
+hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+hibernate.show_sql=true
+hibernate.format_sql=true
