--- a/src/main/resources/email.properties
+++ b/src/main/resources/email.properties
@@ -5,5 +5,5 @@ smtp.port=465
 
 smtp.protocol=smtps
 
-smtp.username=pokemon71723@mail.ru
-smtp.password=gLGDIKIencm5345faS1907li
+smtp.username=
+smtp.password=
