--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
+spring.datasource.driverClassName=com.mysql.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/blogs
 spring.datasource.username=root
-spring.datasource.password=vlad2023450z
-spring.datasource.driver-class -name=com.mysql.jdbc.Driver  
+spring.datasource.password=
 spring.data.rest.base-path=/api
 
 spring.jpa.show-sql=true
