--- a/pom.xml
+++ b/pom.xml
@@ -102,6 +102,11 @@
 			<!--<artifactId>hibernate-entitymanager</artifactId>-->
 			<!--<version>4.3.6.Final</version>-->
 		<!--</dependency>-->
+		<dependency>
+			<groupId>com.cloudinary</groupId>
+			<artifactId>cloudinary-http44</artifactId>
+			<version>1.4.2</version>
+		</dependency>
 	</dependencies>
 
 	<build>
